Analyse new volunteers

--- a/Volunteer Engagement in Sustainable Merton - Data Analysis.ipynb
+++ b/Volunteer Engagement in Sustainable Merton - Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78619113",
+   "id": "7ebc4d5a",
    "metadata": {},
    "source": [
     "# Cronbach's alpha"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2d172e2e",
+   "id": "70c6aa63",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b8ef2a8",
+   "id": "7d2de9f1",
    "metadata": {},
    "source": [
     "# ANOVA"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a64a5447",
+   "id": "33a2296d",
    "metadata": {},
    "source": [
     "## 1. Age"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "584749eb",
+   "id": "120469a4",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "660034fd",
+   "id": "16d89a4e",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e49cb975",
+   "id": "c69df18e",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3625728e",
+   "id": "bed7b002",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cf6e5f13",
+   "id": "2922f5dc",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "70cb4168",
+   "id": "4a15a185",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ff821177",
+   "id": "92ebc8b0",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1564af52",
+   "id": "ebf2cc07",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bbcdb16e",
+   "id": "dacb5236",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b0fdb373",
+   "id": "1c9e9a5a",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "aa31c204",
+   "id": "bd363e31",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "79569bce",
+   "id": "150a50d5",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b53806c",
+   "id": "a72b7fae",
    "metadata": {},
    "source": [
     "## 2. Gender Identity"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a1dde10e",
+   "id": "bc962e72",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b2e8e24a",
+   "id": "ac8b01e7",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b5cfe808",
+   "id": "fcd148c5",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "86ac93b9",
+   "id": "3c540e83",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4071df15",
+   "id": "058bb1c4",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "af7ff355",
+   "id": "33cd242b",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7ab58227",
+   "id": "a44810f5",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "86854891",
+   "id": "5edd1818",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0cee8360",
+   "id": "e465f160",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e085f95b",
+   "id": "7417354a",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f06ee249",
+   "id": "4e28f4e7",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c22940df",
+   "id": "142369f1",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d322618d",
+   "id": "9037ec3c",
    "metadata": {},
    "source": [
     "## 3. Ethnic Background"
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "02ea9a40",
+   "id": "3cb43983",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "cdcacbe7",
+   "id": "f3636290",
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "788bc176",
+   "id": "31445f64",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e02221fc",
+   "id": "5cef3203",
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a16261ca",
+   "id": "1f395954",
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b2e93bab",
+   "id": "1f7eaa60",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5355679d",
+   "id": "994e849c",
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "036aaf81",
+   "id": "c660a6eb",
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bddbeae3",
+   "id": "c2a64257",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "40c0ac4f",
+   "id": "65bb618c",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "16821e3c",
+   "id": "ada8dc70",
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e544e7b7",
+   "id": "d3092481",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17eb35bf",
+   "id": "ceafa0f1",
    "metadata": {},
    "source": [
     "## 4. Disability Status"
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d07f982c",
+   "id": "5b7382ba",
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1742,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c1289730",
+   "id": "bfcc748c",
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "326523df",
+   "id": "505ad4b6",
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "86f9e936",
+   "id": "da60dbed",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6588a106",
+   "id": "a579809c",
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1910,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4cd769cb",
+   "id": "86cdb273",
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "07aa1d08",
+   "id": "a3674d04",
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b056d7b7",
+   "id": "b0201421",
    "metadata": {},
    "outputs": [
     {
@@ -2036,7 +2036,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "20f62c59",
+   "id": "c166b800",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "528ea60a",
+   "id": "1e6fc6f0",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e1523d57",
+   "id": "cfb6c625",
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2162,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4791a6d1",
+   "id": "8d09a425",
    "metadata": {},
    "outputs": [
     {
@@ -2203,7 +2203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e301b27b",
+   "id": "faf63e9f",
    "metadata": {},
    "source": [
     "## 5. Education Level"
@@ -2212,7 +2212,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8417b8da",
+   "id": "08dd46be",
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "757266d1",
+   "id": "abdd82b2",
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "2b023e94",
+   "id": "5f6b6e4f",
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "add5228e",
+   "id": "acad0880",
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "64721f1b",
+   "id": "bfb43205",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "4b469b51",
+   "id": "be64e94d",
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d86fa6ca",
+   "id": "3f11d687",
    "metadata": {},
    "outputs": [
     {
@@ -2510,7 +2510,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a74a5c75",
+   "id": "0d6669cd",
    "metadata": {},
    "outputs": [
     {
@@ -2552,7 +2552,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "f23bcd24",
+   "id": "1e18e460",
    "metadata": {},
    "outputs": [
     {
@@ -2594,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "d9513d23",
+   "id": "61dc55f0",
    "metadata": {},
    "outputs": [
     {
@@ -2636,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ffa6890d",
+   "id": "6c8ccd38",
    "metadata": {},
    "outputs": [
     {
@@ -2678,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "37bd7d95",
+   "id": "e2b9415a",
    "metadata": {},
    "outputs": [
     {
@@ -2719,7 +2719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5628bbab",
+   "id": "58745399",
    "metadata": {},
    "source": [
     "## 6. Employment Status"
@@ -2728,7 +2728,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b4e39909",
+   "id": "35ee439d",
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "3fb76121",
+   "id": "ff713295",
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "e3bcac37",
+   "id": "e9acc219",
    "metadata": {},
    "outputs": [
     {
@@ -2858,7 +2858,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c0865b81",
+   "id": "f111ea2e",
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f8b29f7e",
+   "id": "3009437a",
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2942,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "ec7c2b70",
+   "id": "87c4bac5",
    "metadata": {},
    "outputs": [
     {
@@ -2984,7 +2984,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "ff11eec8",
+   "id": "6b8e91cd",
    "metadata": {},
    "outputs": [
     {
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "402f1da5",
+   "id": "91b3ee05",
    "metadata": {},
    "outputs": [
     {
@@ -3068,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "9dceb603",
+   "id": "516d8227",
    "metadata": {},
    "outputs": [
     {
@@ -3110,7 +3110,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ce6adc19",
+   "id": "6f7c4dce",
    "metadata": {},
    "outputs": [
     {
@@ -3151,7 +3151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b54c540",
+   "id": "ae6f4e94",
    "metadata": {},
    "source": [
     "# Chi Square Test to Analyze Relationship between Project Involvement and Motivation"
@@ -3160,7 +3160,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "62aef591",
+   "id": "b7cc74e7",
    "metadata": {},
    "outputs": [
     {
@@ -3299,7 +3299,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "7a12d9b0",
+   "id": "8832647c",
    "metadata": {},
    "outputs": [
     {
@@ -3328,7 +3328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0eb4871",
+   "id": "14c71423",
    "metadata": {},
    "source": [
     "# Chi Square Test to Analyze Relationship between Hours and Engagement&Satisfaction"
@@ -3337,7 +3337,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "3142875c",
+   "id": "47d57e5c",
    "metadata": {},
    "outputs": [
     {
@@ -3449,7 +3449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f0f7d7",
+   "id": "fcdaeb61",
    "metadata": {},
    "source": [
     "# Sustainability Correlations"
@@ -3458,7 +3458,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "59fcf94d",
+   "id": "8fe8090b",
    "metadata": {},
    "outputs": [
     {
@@ -3517,9 +3517,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63894e55",
+   "metadata": {},
+   "source": [
+    "# Analyse new volunteers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "59e96993",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       Variable    t-stat   p-value  Significant\n",
+      "0          Motivations - Career  1.724020  0.091009        False\n",
+      "1          Motivations - Social  1.427769  0.159701        False\n",
+      "2          Motivations - Values  1.434072  0.157903        False\n",
+      "3        Motivations - Understd  3.057448  0.003610         True\n",
+      "4         Motivations - Enhance  1.697296  0.095985        False\n",
+      "5         Motivations - Protect  1.383213  0.172870        False\n",
+      "6            Engagement - Vigor  1.891887  0.064423        False\n",
+      "7       Engagement - Dedication  2.479112  0.016660         True\n",
+      "8       Engagement - Absorption  2.058087  0.044921         True\n",
+      "9           Satisfaction - Task  1.329645  0.189792        False\n",
+      "10  Satisfaction - Organisation  2.300356  0.025726         True\n",
+      "11                   Commitment -3.853685  0.000339         True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "# Load the dataset\n",
+    "file_path = \"New Volunteers.xlsx\"  # Replace with your actual file path\n",
+    "sheet_name = \"New Volunteers\"  # Replace with the sheet name where the data is\n",
+    "df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "\n",
+    "# Separate groups\n",
+    "new_volunteers = df[df['New / Old'] == 'New']\n",
+    "old_volunteers = df[df['New / Old'] == 'Old']\n",
+    "\n",
+    "# List of columns to test\n",
+    "columns_to_test = ['Motivations - Career', 'Motivations - Social', 'Motivations - Values', \n",
+    "                   'Motivations - Understd', 'Motivations - Enhance', 'Motivations - Protect', \n",
+    "                   'Engagement - Vigor', 'Engagement - Dedication', 'Engagement - Absorption', \n",
+    "                   'Satisfaction - Task', 'Satisfaction - Organisation', 'Commitment']\n",
+    "\n",
+    "# Perform t-tests\n",
+    "results = []\n",
+    "for column in columns_to_test:\n",
+    "    t_stat, p_value = ttest_ind(new_volunteers[column], old_volunteers[column], nan_policy='omit')\n",
+    "    results.append({'Variable': column, 't-stat': t_stat, 'p-value': p_value, \n",
+    "                    'Significant': p_value < 0.05})\n",
+    "\n",
+    "# Convert results to DataFrame for better readability\n",
+    "results_df = pd.DataFrame(results)\n",
+    "\n",
+    "# Display the results\n",
+    "print(results_df)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ef98884",
+   "id": "3f89c634",
    "metadata": {},
    "outputs": [],
    "source": []
